init: start CV#3 task
Залит проект CV#3

--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/ico/fav icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <header class="header">
+        <div class="h-container"> <!--Шапка-->
+            <nav class="nav-head">
+                    <div class="nav-item"><a href="#Contacts">Contacts</a></div>
+                    <div class="nav-item"><a href="#Summary">Summary</a></div>
+                    <div class="nav-item"><a href="#Skills">Skills</a></div>
+                    <div class="nav-item"><a href="#Code">Code</a></div>
+                    <div class="nav-item"><a href="#Courses">Courses</a></div>
+                    <div class="nav-item"><a href="#Education">Education</a></div>
+                    <div class="nav-item"><a href="#Languages">Languages</a></div>
+            </nav>
+        </div>
 
+    </header>
+    <main class="main">
+        <div class="main-container">
+        <div class="h-container"> <!--main container-->
+            <section class="section"> <!--Section Name-->
+                <div>
+                    <img class="img-h" src="./assets/img/avatar.jpg" alt="avatar"> <!--Аватар-->
+                    <div class="section-title">
+                      <h1>Pavel Gusev</h1>  <!--Name-->
+                      <h3>Student RS school</h3> <!--Job-->
+                    </div>
+                </div>
+            </section>
+
+            <section class="section" id="Contacts"> <!--Contacts-->
+                <ul>
+                    <li> <b>Moscow, Russian Federation</b></li>
+                    <li> <b>Phone number:</b> +7-000-000-00-00</li>
+                    <li> <b>Email:</b> gusev.prb@icloud.com </li>
+                    <li> <b>Telegram:</b> <a href="https://t.me/RaccoonBlitz">@RaccoonBlitz</a></li>
+                    <li> <b>Github:</b> <a href="https://github.com/Raccoonblitz">@RaccoonBlitz</a></li>
+                </ul>
+            </section>
+
+            <section class="section" id="Skills"><!--Skills-->
+                <ul>
+                    <li> HTML&CSS </li>
+                    <li> Python </li>
+                    <li> JavaScript </li>
+                    <li> Git&Github </li>
+                  </ul>
+            </section>
+
+            <section class="section" id="Code"> <!--Code-->
+                <b>Code CSS:</b>
+                <code>
+                    .nav-item {
+                        display: inline; 
+                        margin-right: 5px; 
+                        border: 1px solid #000; 
+                        padding: 3px;
+                    }
+                </code>    
+            </section>
+
+            <section class="section" id="Education"><!--Education-->
+                Federal State Budget Educational Institution of Higher Education <br>
+                «MIREA - Russian Technological University» (undergraduate education)
+            </section>
+
+            <section class="section" id="Summary"><!--Summary-->
+                <b>Summary:</b>
+                <div>I love programming, it's almost a childhood dream. But before that, it did not work out with training in this direction. Now I am determined to see it through to the end, to develop the necessary skills to master the profession of Frontend developer.</div>
+            </section>
+
+            <section class="section" id="Courses"><!--Courses-->
+                <b>Courses:</b>
+                <ul>
+                    <li> <a href="https://htmlacademy.ru/study">HTML Academy</a> (Basic level)</li>
+                    <li> <a href="https://rs.school/">Rolling Scopes School</a> (Stage 0)</li>
+                </ul>
+            </section>
+
+            <section class="section" id="Languages"><!--Languages-->
+                <b>Languages:</b>
+                <ul>
+                    <li> Russian: native</li>
+                    <li> English: middle</li>
+                    <li> Deutch: basic</li>
+                </ul>
+            </section>
+        </div>
+    </div>
+    </main>
+    <footer class="footer">
+        <div class="h-container"><!---->
+            <div class="nav-item">© 2022</div>
+            <div class="nav-item"><a href="https://github.com/Raccoonblitz">Pavel Gusev</a></div>
+            <div class="nav-item"><a href="https://rs.school/"><img class="img-f" src="assets/img/rs_school_js.svg"></a></div>
+        </div>
+    </footer>
+    
+</body>
+</html>
